# envstruct

./: .gitignore  Cargo.toml  README.md  deny.toml  justfile  rustfmt.toml
crates/envstruct/: Cargo.toml  build.rs
crates/envstruct/example/: basic.rs  usage.rs
crates/envstruct/src/: env_json.rs  env_map.rs  error.rs  lib.rs  parse_nested.rs  parse_primitive.rs  usage.rs  with_json.rs
crates/envstruct/tests/: compiletest.rs  parse_env.rs  test_env_skip.rs  test_nonzero.rs  test_parse_env.rs
crates/envstruct/tests/compiletest/: derive_error_span.rs  derive_error_span.stderr
crates/envstruct_derive/: Cargo.toml
crates/envstruct_derive/src/: default_attr.rs  lib.rs  normalize_type_path.rs
