[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Alfatm <alfatm@gmail.com>"]
categories = ["config"]
edition = "2021"
keywords = ["config", "env", "macro", "configuration", "environment"]
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/volkagames/envstruct.git"
version = "1.0.3"
description = "Convert the environment variables into a structured configuration"
documentation = "https://docs.rs/enstruct"
